--- a/recherche.html
+++ b/recherche.html
@@ -1,13 +1,13 @@
 ---
-title: Search
+title: Recherche
 sitemap: false
-permalink: /search/
+permalink: /recherche/
 ---
 
 <div class="search-page">
-	<h2>Search Results</h2>
+	<h2>Résultats de Recherche</h2>
 
-	<p><span id="search-process">Loading</span> results <span id="search-query-container" style="display: none;">for "<strong id="search-query"></strong>"</span></p>
+	<p><span id="search-process">Chargement</span> résultats <span id="search-query-container" style="display: none;">pour "<strong id="search-query"></strong>"</span></p>
 	<ul id="search-results"></ul>
 </div>
 
