18/09/2023 - Editing Home title

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-title: API Docs
+title: DOC by SALIM.LINK
 ---
 {% assign sorted_collections = site.collections | sort: "position_number" %}
 {% for collection in sorted_collections %}
